*** empty log message ***

--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -44,7 +44,7 @@ $(TARGETS): %: $(BYTE_OBJS) %.cmo
 	$(OCAMLC) -o toplevel $(OCAMLFLAGS) $(LIB_OBJS) $+ 
 
 $(OPT_TARGETS): %.opt: $(OPT_OBJS) %.cmx 
-	$(OCAMLOPT) -o pcf $(OCAMLOPTFLAGS) $(LIB_OPT_OBJS) $+
+	$(OCAMLOPT) -o toplevel.opt $(OCAMLOPTFLAGS) $(LIB_OPT_OBJS) $+
 
 # Suffixes.
 .SUFFIXES: .ml .mli .cmo .cmi .cmx
