Added doc directory to hold files I occasionally refer to. Added very preliminary outsyn.ml and translate.ml Simplified the syntax of items in theories a little (e.g.,   removing some Let_ forms.)

--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -16,7 +16,8 @@ BYTE_OBJS = syntax.cmo \
 	message.cmo \
 	parser.cmo \
 	lexer.cmo \
-	context.cmo
+	context.cmo \
+        outsyn.cmo
 
 
 OPT_OBJS = $(subst .cmo,.cmx,$(BYTE_OBJS))
