Checked in some changes I made a while back that still compile, but may be completely out-of-date and useless.  Fixed a few other compilation errors along the way.

--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -18,8 +18,9 @@ BYTE_OBJS = syntax.cmo \
 	lexer.cmo \
 	context.cmo \
         outsyn.cmo \
+        translate.cmo \
+        outsyn.cmo \
 	logic.cmo
-
 
 OPT_OBJS = $(subst .cmo,.cmx,$(BYTE_OBJS))
 
