Making dense.thr work, sorting out infix operators and relations

--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -8,7 +8,7 @@ OCAMLYFLAGS = -v
 
 INCLUDES =
 
-OCAMLFLAGS = -w p $(INCLUDES)
+OCAMLFLAGS = $(INCLUDES)
 OCAMLCPFLAGS =
 OCAMLOPTFLAGS = -w p $(INCLUDES) -unsafe -inline 5 
 
