*** empty log message ***

--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -17,11 +17,12 @@ BYTE_OBJS = syntax.cmo \
 	parser.cmo \
 	lexer.cmo \
 	context.cmo \
-        infer.cmo \
-	logic.cmo \
-        outsyn.cmo \
-        opt.cmo \
-        translate.cmo \
+        infer.cmo 
+# \
+#	logic.cmo \
+#        outsyn.cmo \
+#        opt.cmo \
+#        translate.cmo \
 
 OPT_OBJS = $(subst .cmo,.cmx,$(BYTE_OBJS))
 
