--- a/src/Makefile
+++ b/src/Makefile
@@ -48,6 +48,14 @@ parser.cmi: parser.mli syntax.cmi
 lexer.cmi: lexer.mli parser.mli
 	$(OCAMLC) $(OCAMLFLAGS) -c lexer.mli
 
+coq_parser.cmo: coq_parser.ml coq_parser.cmi
+
+coq_parser.cmi: coq_parser.mli syntax.cmi
+	$(OCAMLC) $(OCAMLFLAGS) -c coq_parser.mli
+
+coq_lexer.cmi: coq_lexer.mli coq_parser.mli
+	$(OCAMLC) $(OCAMLFLAGS) -c coq_lexer.mli
+
 $(TARGETS): %: $(BYTE_OBJS) %.cmo
 	$(OCAMLC) -o rz $(OCAMLFLAGS) $(LIB_OBJS) $+ 
 
