Thinning and Optimization are now separate passes.  Optimization preserves types; thinning doesn't

--- a/src/Makefile
+++ b/src/Makefile
@@ -24,6 +24,7 @@ BYTE_OBJS = name.cmo \
         newinfer.cmo \
         outsyn.cmo \
 	pp.cmo \
+	thin.cmo \
         opt.cmo \
         translate.cmo
 
