Revamped backend organization and added nested theories

--- a/src/Makefile
+++ b/src/Makefile
@@ -23,6 +23,7 @@ BYTE_OBJS = name.cmo \
 	logicrules.cmo \
         newinfer.cmo \
         outsyn.cmo \
+	outsynrules.cmo \
 	pp.cmo \
 	thin.cmo \
         opt.cmo \
