--- a/private/cie/Makefile
+++ b/private/cie/Makefile
@@ -9,7 +9,15 @@ TEXFILES = cie.tex \
 	comparison.tex \
 	wtype.tex
 
+default: main.pdf
+
 all: cie-long.pdf cie-short.pdf
+
+main.pdf: main.tex $(TEXFILES) rzbib.bib wtype.mli
+	latex main.tex
+	bibtex main
+	latex main.tex
+	pdflatex main.tex
 
 cie-long.pdf: cie-long.tex $(TEXFILES) rzbib.bib wtype.mli
 	latex cie-long.tex
@@ -24,4 +32,4 @@ cie-short.pdf: cie-short.tex $(TEXFILES) rzbib.bib wtype.mli
 	pdflatex cie-short.tex
 
 clean:
-	/bin/rm -f *.{aux,log} cie-{long,short}.{ps,pdf,bbl,blg,pdfsync,dvi}
+	/bin/rm -f *.{aux,log} cie-{long,short}.{ps,pdf,bbl,blg,pdfsync,dvi} main.{ps,pdf,bbl,blg,pdfsync,dvi}
