--- a/private/cie-jlc/Makefile
+++ b/private/cie-jlc/Makefile
@@ -9,27 +9,15 @@ TEXFILES = cie.tex \
 	comparison.tex \
 	wtype.tex
 
-default: main.pdf
+default: paper.pdf
 
-all: cie-long.pdf cie-short.pdf
+all: paper.pdf
 
-main.pdf: main.tex $(TEXFILES) rzbib.bib wtype.mli
-	latex main.tex
-	bibtex main
-	latex main.tex
-	pdflatex main.tex
-
-cie-long.pdf: cie-long.tex $(TEXFILES) rzbib.bib wtype.mli
-	latex cie-long.tex
-	bibtex cie-long
-	latex cie-long.tex
-	pdflatex cie-long.tex
-
-cie-short.pdf: cie-short.tex $(TEXFILES) rzbib.bib wtype.mli
-	latex cie-short.tex
-	bibtex cie-short
-	latex cie-short.tex
-	pdflatex cie-short.tex
+paper.pdf: paper.tex $(TEXFILES) rzbib.bib wtype.mli
+	pdflatex paper.tex
+	bibtex paper
+	pdflatex paper.tex
+	pdflatex paper.tex
 
 clean:
-	/bin/rm -f *.{aux,log} cie-{long,short}.{ps,pdf,bbl,blg,pdfsync,dvi} main.{ps,pdf,bbl,blg,pdfsync,dvi}
+	/bin/rm -f *.{aux,log} paper.{ps,pdf,bbl,blg,pdfsync,dvi}
